# bladeRF

hdl/fpga/ip/nuand/: nuand.do
hdl/fpga/ip/nuand/simulation/: fx3_model.vhd
hdl/fpga/ip/nuand/synthesis/: fifo_reader.vhd  fifo_writer.vhd
hdl/fpga/ip/nuand/synthesis/lms6002d/modelsim/: .gitignore
hdl/modelsim/: .gitignore  compile.do
host/cmake/modules/: FindLibUSB.cmake
host/common/src/: conversions.c
host/libraries/: CMakeLists.txt
host/libraries/extio/: CMakeLists.txt  extio_bladerf.def  extio_bladerf.h
host/libraries/extio/src/: extio_bladerf.cpp  extio_bladerf.h
host/libraries/libbladeRF/include/: libbladeRF.h
host/libraries/libbladeRF/src/: bladerf.c  lms.c  lms.h
host/libraries/libbladeRF/src/backend/: libusb.c
host/libraries/libbladeRF/tests/test_async/: main.c
host/utilities/: CMakeLists.txt
host/utilities/bladeRF-cli/: CMakeLists.txt
host/utilities/bladeRF-cli/src/: script.c  script.h
host/utilities/bladeRF-cli/src/cmd/: correct.c
